# Porfolio_Consolidator

./: .env.example  .gitignore  DEVELOPER.md  ReadMe.md  exceptions_list.txt  pyproject.toml  requirements.txt  run_all.py  test_with_sample_data.py
.github/workflows/: ci.yml
.streamlit/: config.toml
Data/reference/: investment_rulebook.json
ai_advisor/: advisor.py  ai_tools.py  ui.py
analytics/: __init__.py  benchmark.py  calc_allocations.py  calculate_xirr.py  compute_equity_lookthrough.py  export_ai_summary.py  fetch_allocations.py  mf_data_fetcher.py  peer_returns_engine.py
core/: __init__.py  logging_config.py
dashboard/: __init__.py  app.py  export_pdf.py  responsive.py  ui_data_management.py
ingestion/: __init__.py  ingest_epf.py  ingest_fd.py  ingest_global.py  ingest_mf.py  ingest_nps.py  ingest_stocks.py
sample_data/: README.md  _generate_xlsx.py
sample_data/EPF/: epf_config.csv
sample_data/FD/: FD_details.xlsx
sample_data/global/: global_transactions.csv
sample_data/mf/: Rahul_MF.xlsx
tests/: conftest.py  test_ai_advisor.py  test_benchmark.py  test_calc_allocations.py  test_calculate_xirr.py  test_dashboard_helpers.py  test_fetch_allocations.py  test_fetch_nps_navs.py  test_ingest_epf.py  test_ingest_fd.py  test_ingest_mf.py  test_ingest_nps.py  test_ingest_stocks.py  test_mf_data_fetcher.py  test_peer_returns_engine.py  test_valuate_epf.py  test_valuate_fd.py  test_valuate_mf.py  test_valuate_stocks.py
valuation/: __init__.py  fetch_nps_navs.py  valuate_epf.py  valuate_fd.py  valuate_global.py  valuate_mf_nps.py  valuate_stocks.py
(+1 files in other folders)
